build: configure runServer for hotswapAgent